# USB-App

jni/: Android.mk
jni/libusb/: Android.mk  Application.mk
jni/libusb/android/jni/: Application.mk
jni/libusb/android/libs/arm64-v8a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
jni/libusb/android/libs/armeabi-v7a/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
jni/libusb/android/libs/x86/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
jni/libusb/android/libs/x86_64/: dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
jni/libusbredir/: .gitlab-ci.yml  Android.mk  Application.mk  ChangeLog.md  README.md  TODO  meson.build  meson_options.txt
jni/libusbredir/build-aux/: msitool.py  oss-fuzz.sh
jni/libusbredir/data/: meson.build  usbredirect.wxs.in
jni/libusbredir/docs/: multi-thread.md  usb-redirection-protocol.md
jni/libusbredir/fuzzing/: README.md  meson.build  standalone.c  usbredirfilterfuzz.cc  usbredirparserfuzz.cc
jni/libusbredir/include/: config.h
jni/libusbredir/tests/: filter.c  meson.build
jni/libusbredir/tools/: meson.build  usbredirect.1  usbredirect.c
jni/libusbredir/usbredirhost/: meson.build  usbredirhost.c  usbredirhost.h  usbredirhost.map
jni/libusbredir/usbredirparser/: meson.build  strtok_r.c  strtok_r.h  usbredirfilter.c  usbredirfilter.h  usbredirparser.c  usbredirparser.h  usbredirparser.map  usbredirproto-compat.h  usbredirproto.h
jni/libusbredir/usbredirserver/: meson.build  usbredirserver.1  usbredirserver.c
jni/libusbredir/usbredirtestclient/: meson.build  usbredirtestclient.c
